--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <link rel="icon" href="icon.png" type="image/gif">
       </head>
       <body>
-            test 123
-      </body> hello
+            <hello>
+            </hello>
+      </body>
 </html>
