--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
             <link rel="icon" href="icon.png" type="image/gif">
       </head>
       <body>
-      </p>hello</p>
+            hello
       </body>
 </html>
